<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="name"
            type="String" />

        <variable
            name="height"
            type="String" />

        <variable
            name="category"
            type="String" />

        <variable
            name="gridRef"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/MyCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:layout_marginBottom="@dimen/space_8"
        android:padding="@dimen/space_8">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@{name}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/first_names" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_height_label"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8"
            android:text="@string/label_height_meters"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_height"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{height}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_height_label"
            app:layout_constraintStart_toEndOf="@+id/tv_height_label"
            tools:text="230 (m)" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_category_label"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_category"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_height" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_category"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{category}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_category_label"
            app:layout_constraintStart_toEndOf="@+id/tv_category_label"
            tools:text="MON" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_grid_ref_label"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_grid_ref"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_label" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_grid_ref"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{gridRef}"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_grid_ref_label"
            app:layout_constraintStart_toEndOf="@+id/tv_grid_ref_label"
            tools:text="NDD124124" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>